package PatternState;
import javafx.scene.paint.Color;


/**
 * Created by Дарья on 21.05.2016.
 */
public abstract class State {
    public abstract Color setColor();
}
